Merge Fabric